# TJURM-MineShaftIdentify

./: CMakeLists.txt  README.md  main.cpp
